project/app-todo-list/server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: mmiglioranza22/project-todo-app
          volumeMounts:
            - name: image-vol
              mountPath: /usr/src/app/build
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: image-vol
          persistentVolumeClaim:
            claimName: image-vol-pvc
